src/blocks/iconlist/editor.scss
/**
 * #.# Editor Styles
 *
 * CSS for just Backend enqueued after style.scss
 * which makes it higher in priority.
 */
.block-editor-block-list__block[data-type="kadence/iconlist"] {
	margin-bottom: 0;
	margin-top: 0;
}
.kt-svg-icon-list-item-wrap {
	display: flex;
	align-items: center;
	text-align: left;
	position: relative;
}
.rtl .kt-svg-icon-list-item-wrap {
	text-align: right;
}
.kt-svg-icon-list-single {
	margin-right: 10px;
	padding: 4px 0;
}
.rtl .kt-svg-icon-list-single {
	margin-left: 10px;
	margin-right: 0;
}
.kt-svg-icon-list-item-wrap {
	.editor-rich-text,
	.kt-svg-icon-list-text {
		flex-grow: 2;
	}
}
.kt-svg-icon-list-container .block-editor-block-list__layout {
	display: grid;
	grid-template-rows: auto;
}
.block-editor-block-list__block[data-align="center"] .kt-svg-icon-list-item-wrap {
	justify-content: center;
	.editor-rich-text {
		min-width: 20px;
		flex-grow: 0;
	}
}
.kb-icon-list-tooltip-wrap {
	display: flex;
	align-items: center;
}
.wp-block-kadence-listitem {
	.kb-icon-list-tooltip:where(:not(.kb-list-tooltip-no-border)) {
		border-bottom: 1px dashed currentColor;
	}
}
// Tooltip Stuff
.kt-svg-icon-list-item-wrap > .tooltip-ref-wrap:not(.kb-icon-list-tooltip) {
	width: 100%;
}
.kb-icon-list-text-wrap:not(.tooltip-ref-has-tip) {
	width: 100%;
}
// .kb-icon-list-tooltip > .kb-icon-list-text-wrap {
// 	width: auto;
// }

.wp-block-kadence-listitem .kt-svg-icon-link > .tooltip-ref-wrap > .kb-icon-list-tooltip {
	border-bottom-width: 0px;
}
.kt-svg-icon-list-style-stacked .kt-svg-icon-list-single {
	border: 0px solid transparent;
}
.kb-icon-list-style-stacked .kt-svg-icon-list-single {
	border: 0px solid transparent;
}
/* Remove padding from innerblocks */
.kt-svg-icon-list-container .block-editor-block-list__layout .wp-block {
	margin-top: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	margin-right: 0px;
}

.wp-block[data-align="center"] .kt-svg-icon-list-container .block-editor-block-list__layout .wp-block {
	margin-left: auto;
	margin-right: auto;
}
.kt-svg-icon-list-columns-1 .block-editor-block-list__layout {
	grid-template-columns: minmax(0, 1fr);
}
.kt-svg-icon-list-columns-2 .block-editor-block-list__layout {
	grid-template-columns: repeat(2, minmax(0, 1fr));
}
.kt-svg-icon-list-columns-3 .block-editor-block-list__layout {
	grid-template-columns: repeat(3, minmax(0, 1fr));
}
.kt-list-icon-aligntop .kt-svg-icon-list-item-wrap {
	align-items: flex-start;
}
.kt-list-icon-alignbottom .kt-svg-icon-list-item-wrap {
	align-items: flex-end;
}

// #start-resizable-editor-section {
//     display: none;
// }

// /* add all responsive styles here */
// @media (max-width: 1024px) {
// 	.kt-tablet-svg-icon-list-columns-2 .block-editor-block-list__layout {
// 		grid-template-columns: repeat(2, minmax(0, 1fr));;
// 	}
// 	.kt-tablet-svg-icon-list-columns-3 .block-editor-block-list__layout {
// 		grid-template-columns: repeat(3, minmax(0, 1fr));;
// 	}
// }
// @media (max-width: 767px) {
// 	.kt-mobile-svg-icon-list-columns-2 .block-editor-block-list__layout {
// 		grid-template-columns: repeat(2, minmax(0, 1fr));;
// 	}
// 	.kt-mobile-svg-icon-list-columns-3 .block-editor-block-list__layout {
// 		grid-template-columns: repeat(3, minmax(0, 1fr));;
// 	}
// }

// #end-resizable-editor-section {
//     display: none;
// }

.kt-svg-icon-list-level-0 {
	padding-left: 0rem;
}

.kt-svg-icon-list-level-1 {
	padding-left: 2rem;
}

.kt-svg-icon-list-level-2 {
	padding-left: 4rem;
}

.kt-svg-icon-list-level-3 {
	padding-left: 6rem;
}

.kt-svg-icon-list-level-4 {
	padding-left: 8rem;
}

.kt-svg-icon-list-level-5 {
	padding-left: 10rem;
}

.wp-block[data-align="center"]:has(.wp-block-kadence-iconlist) {
	clear: both;
	margin: 0 auto;
	text-align: center;
	display: grid;
}
.wp-block[data-align="center"]:has(.kt-svg-icon-list-columns-1) {
	clear: both;
	margin: 0 auto;
	text-align: center;
	display: table !important;
}

